[package]
name = "steam-stubbed"
authors = ["NotAndreh"]
version = "1.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
minhook = "0.9.0"
skidscan = "2.0.1"
winapi = { version = "0.3.9", features = ["minwindef", "libloaderapi", "memoryapi", "winnt"] }

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
strip = true
codegen-units = 1
